標題區域設定

--- a/Yubay_Drone_team.csproj
+++ b/Yubay_Drone_team.csproj
@@ -78,6 +78,9 @@
     <Content Include="Bootstrap\js\bootstrap.js" />
     <Content Include="Bootstrap\js\bootstrap.min.js" />
     <Content Include="Global.asax" />
+    <Content Include="Imgs\iconfinder_Safety01_928417.svg" />
+    <Content Include="Imgs\iconfinder_User_5431752.svg" />
+    <Content Include="Imgs\news20171201_001.png" />
     <Content Include="JQuery\jquery-3.6.0.min.js" />
     <Content Include="User_Account.aspx" />
     <Content Include="Web.config" />
