--- a/Yubay_Drone_team.csproj
+++ b/Yubay_Drone_team.csproj
@@ -102,6 +102,7 @@
     </Compile>
     <Compile Include="Helpers\LoginHelper.cs" />
     <Compile Include="Helpers\LoginInfo.cs" />
+    <Compile Include="Helpers\UserLevel.cs" />
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
