--- a/Yubay_Drone_team.csproj
+++ b/Yubay_Drone_team.csproj
@@ -78,6 +78,7 @@
     <Content Include="Bootstrap\js\bootstrap.js" />
     <Content Include="Bootstrap\js\bootstrap.min.js" />
     <Content Include="Drone_Create.aspx" />
+    <Content Include="Drone_Detail.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Imgs\iconfinder_Safety01_928417.svg" />
     <Content Include="Imgs\iconfinder_User_5431752.svg" />
@@ -96,6 +97,13 @@
     </Compile>
     <Compile Include="Drone_Create.aspx.designer.cs">
       <DependentUpon>Drone_Create.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Drone_Detail.aspx.cs">
+      <DependentUpon>Drone_Detail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Drone_Detail.aspx.designer.cs">
+      <DependentUpon>Drone_Detail.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
