--- a/Yubay_Drone_team.csproj
+++ b/Yubay_Drone_team.csproj
@@ -126,6 +126,7 @@
       <DependentUpon>Main.Master</DependentUpon>
     </Compile>
     <Compile Include="Managers\AccountManager.cs" />
+    <Compile Include="Managers\DroneManager.cs" />
     <Compile Include="Models\AccountModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User_Account.aspx.cs">
