--- a/Yubay_Drone_team.csproj
+++ b/Yubay_Drone_team.csproj
@@ -126,7 +126,7 @@
       <DependentUpon>Main.Master</DependentUpon>
     </Compile>
     <Compile Include="Managers\AccountManager.cs" />
-    <Compile Include="Managers\DroneManager.cs" />
+    <Compile Include="Managers\ConnectionDB.cs" />
     <Compile Include="Models\AccountModel.cs" />
     <Compile Include="Models\DroneMedel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
