--- a/Web.config
+++ b/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<connectionStrings>
+	<add name="systemDataBase" connectionString ="Data Source=localhost\SQLExpress;Initial Catalog=Yubay_Drone; Integrated Security=true"></add>
+	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
