--- a/Yubay_Drone_team.csproj
+++ b/Yubay_Drone_team.csproj
@@ -82,6 +82,7 @@
     <Content Include="Global.asax" />
     <Content Include="Imgs\delete.png" />
     <Content Include="Imgs\edit-button.png" />
+    <Content Include="Imgs\exit.svg" />
     <Content Include="Imgs\iconfinder_Safety01_928417.svg" />
     <Content Include="Imgs\iconfinder_User_5431752.svg" />
     <Content Include="Imgs\news20171201_001.png" />
