--- a/Yubay_Drone_team.csproj
+++ b/Yubay_Drone_team.csproj
@@ -77,6 +77,7 @@
     <Content Include="Bootstrap\js\bootstrap.bundle.min.js" />
     <Content Include="Bootstrap\js\bootstrap.js" />
     <Content Include="Bootstrap\js\bootstrap.min.js" />
+    <Content Include="Customer_Create.aspx" />
     <Content Include="Drone_Create.aspx" />
     <Content Include="Drone_Detail.aspx" />
     <Content Include="Global.asax" />
@@ -94,6 +95,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Customer_Create.aspx.cs">
+      <DependentUpon>Customer_Create.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Customer_Create.aspx.designer.cs">
+      <DependentUpon>Customer_Create.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Drone_Create.aspx.cs">
       <DependentUpon>Drone_Create.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
