--- a/Yubay_Drone_team.csproj
+++ b/Yubay_Drone_team.csproj
@@ -78,6 +78,7 @@
     <Content Include="Bootstrap\js\bootstrap.bundle.min.js" />
     <Content Include="Bootstrap\js\bootstrap.js" />
     <Content Include="Bootstrap\js\bootstrap.min.js" />
+    <Content Include="ChangePages.ascx" />
     <Content Include="Customer_Create.aspx" />
     <Content Include="Drone_Create.aspx" />
     <Content Include="Drone_Detail.aspx" />
@@ -96,6 +97,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChangePages.ascx.cs">
+      <DependentUpon>ChangePages.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ChangePages.ascx.designer.cs">
+      <DependentUpon>ChangePages.ascx</DependentUpon>
+    </Compile>
     <Compile Include="Customer_Create.aspx.cs">
       <DependentUpon>Customer_Create.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
