管理員權限功能 完成

--- a/Yubay_Drone_team.csproj
+++ b/Yubay_Drone_team.csproj
@@ -44,6 +44,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -97,6 +100,9 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\GetUserLevel.ashx.cs">
+      <DependentUpon>GetUserLevel.ashx</DependentUpon>
+    </Compile>
     <Compile Include="ChangePages.ascx.cs">
       <DependentUpon>ChangePages.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -171,6 +177,7 @@
     <Content Include="Bootstrap\js\bootstrap.bundle.min.js.map" />
     <Content Include="Bootstrap\js\bootstrap.js.map" />
     <Content Include="Bootstrap\js\bootstrap.min.js.map" />
+    <Content Include="API\GetUserLevel.ashx" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
