--- a/Yubay_Drone_team.csproj
+++ b/Yubay_Drone_team.csproj
@@ -96,6 +96,7 @@
     <Content Include="Imgs\search.svg" />
     <Content Include="JQuery\jquery-3.6.0.min.js" />
     <Content Include="Login.aspx" />
+    <Content Include="UserAccount_Create.aspx" />
     <Content Include="User_Account.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -157,6 +158,13 @@
     <Compile Include="Models\AccountModel.cs" />
     <Compile Include="Models\DroneMedel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserAccount_Create.aspx.cs">
+      <DependentUpon>UserAccount_Create.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UserAccount_Create.aspx.designer.cs">
+      <DependentUpon>UserAccount_Create.aspx</DependentUpon>
+    </Compile>
     <Compile Include="User_Account.aspx.cs">
       <DependentUpon>User_Account.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
