--- a/Yubay_Drone_team.csproj
+++ b/Yubay_Drone_team.csproj
@@ -106,6 +106,9 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\GetCustomerDetail.ashx.cs">
+      <DependentUpon>GetCustomerDetail.ashx</DependentUpon>
+    </Compile>
     <Compile Include="API\GetUserLevel.ashx.cs">
       <DependentUpon>GetUserLevel.ashx</DependentUpon>
     </Compile>
@@ -227,6 +230,7 @@
     <Content Include="Bootstrap\js\bootstrap.js.map" />
     <Content Include="Bootstrap\js\bootstrap.min.js.map" />
     <Content Include="API\GetUserLevel.ashx" />
+    <Content Include="API\GetCustomerDetail.ashx" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
